--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "server": {
-        "address": "localhost",
-        "port": 8888
+        "address": "0.0.0.0",
+        "port": 8080
     },
     "mysql": {
         "port": 3306,
