--- a/service/blog/api/etc/blog-api.yaml
+++ b/service/blog/api/etc/blog-api.yaml
@@ -1,3 +1,16 @@
-Name: blog-api
-Host: 0.0.0.0
-Port: 8888
+Name: post-api
+Host: 127.0.0.1
+Port: 9998
+
+Mysql:
+  DataSource: root:BDB515dab2a7@tcp(49.234.98.15:3306)/blog?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+
+CacheRedis:
+  - Host: 49.234.98.15:6379
+    Pass: qianxi0410
+    Type: node
+
+Redis:
+  Host: 49.234.98.15:6379
+  Pass: qianxi0410
+  Type: node
