Add ouath2 and del unused field

--- a/service/blog/api/etc/blog-api-demo.yml
+++ b/service/blog/api/etc/blog-api-demo.yml
@@ -13,3 +13,9 @@ Redis:
   Host: $host
   Pass: $pass
   Type: node
+
+Github:
+  ApiUrl: $ApiUrl
+  TokenUrl: $TokenUrl
+  ClientId: $ClientId
+  ClientSecret: $ClientSecret
